--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 
     <!--CSS-->
     <link rel="stylesheet" href="index.css">
+    <!-- <link rel="stylesheet" href="script.js"> -->
+    <link rel="stylesheet" href="script.js">
 </head>
 
 <body>
@@ -23,7 +25,6 @@
             <ul class="menu">
                 <a href="#home">Home</a>
                 <a href="#about">About</a>
-                <!-- <a href="#service">Services</a> -->
                 <a href="#projects">Projects</a>
                 <a href="#contact">Contact</a>
             </ul>
@@ -263,7 +264,7 @@
                     </div>
                     <div class="elem">
                         <div class="send">
-                            <center><input onsubmit="sendEmail()"; reset(); return false type="submit" class="btn" value="Send Message" style="color:black"><i
+                            <center><input  type="submit" class="btn" value="Send Message" style="color:black"><i
                                     class="fa-solid fa-paper-plane-top"></i></center>
                         </div>
                     </div>
@@ -296,15 +297,15 @@
     </section>
 
     <!--Javascript-->
-    <script src="js/script.js"></script>
+    <script src="script.js"></script>
     <script src="https://smtpjs.com/v3/smtp.js"></script>
     <script>
         function sendEmail(event) {
             event.preventDefault();
             Email.send({
-                Host: "smtp.yourisp.com",
+                Host: "smtp.elasticemail.com",
                 Username: "anirudhankamath@gmail.com",
-                Password: "Akamath/06",
+                Password: "337C906ADA139A181163118F6CAA23794F5A",
                 To: 'anirudhankamath@gmail.com',
                 From: document.getElementById('email').value,
                 Subject: "Portfolio Contact Form",
