--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
         <div class="row">
 
             <!-- <form onsubmit="sendEmail(event)"; reset(); > -->
-            <form action="https://formspree.io/f/xrgdqega"  method="post" >
+            <form action="https://formspree.io/f/xrgdqega" reset(); method="post" >
                 <center>
                     <div class="inputBox">
                         <input type="text" placeholder="Name" name="Name" id="name">
