--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <hr>
     <hr>
     <section class="home" id="home">
-        <img src="img/original.jpg" alt="">
+        <img src="img/ani.png" alt="">
         <div class="content">
             <h3>Hi there, I'm <span>Anirudha Kamath</span></h3>
             <p>Web developer</p>
