added my resume1

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <h3>Hi there, I'm <span>Anirudha Kamath</span></h3>
             <p>Web developer</p>
             <div class="elem">
-                <a href="img/Resume.jpg" Download class="btn"><i class="fa-solid fa-download"></i><b>Download
+                <a href="img/AnirudhaKamath_ISE.pdf" Download class="btn"><i class="fa-solid fa-download"></i><b>Download
                         Resume</b></a>
             </div>
         </div>
@@ -64,7 +64,7 @@
         <div class="box-container">
             <h2>Hey there! I'm Anirudha Kamath, currently persuing my B.E in Information Science and Engineering,
                 actively looking for internship opportunities. I like web development and have done various projects on
-                the same. I like working on both front-end and back-end.</h2>
+                the same. I like working on both front-end and back-end.  I'm really looking forward to work as an intern in an organization to improve my knowledge and analytical skills.</h2>
             <!-- <hr> -->
             <div class="skills">
                 <h1 class="skills-heading">Experience</h1>
