added certificate and changed photo

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <hr>
     <hr>
     <section class="home" id="home">
-        <img src="img/ani.png" alt="">
+        <img src="img/anirudh.png.jpeg" alt="">
         <div class="content">
             <h3>Hi there, I'm <span>Anirudha Kamath</span></h3>
             <p>Web developer</p>
@@ -65,7 +65,7 @@
             <h2>Hey there! I'm Anirudha Kamath, currently persuing my B.E in Information Science and Engineering,
                 actively looking for internship opportunities. I like web development and have done various projects on
                 the same. I like working on both front-end and back-end.  I'm really looking forward to work as an intern in an organization to improve my knowledge and analytical skills.</h2>
-            <!-- <hr> -->
+            <!-- <h2>Other than my educational background, I love to play cricket and I spend my time by playing Harmonium, clicking photos and many more.</h2> -->
             <div class="skills">
                 <h1 class="skills-heading">Experience</h1>
                 <!-- <h2></h2> -->
@@ -73,11 +73,19 @@
 
                     <!-- Experience -->
                     <li class="green">
-                        <div class="when">ongoing</div>
+                        <div class="when">Sept 2022 - Oct 2022</div>
                         <div class="where"><b>The Sparks Foundation</b></div>
                         <!-- <h3 class="what green">Senior Online Editor</h3> -->
-
                         <p class="description">Web Development and Designing Intern
+                            <br>
+                            <a href="img/Sparks Internship(Sept 2022).png">Certificate</a>
+                        </p>
+                    </li>
+                    <li class="green">
+                        <div class="when">Nov 2022 - Jan 2023</div>
+                        <div class="where"><b>Cantilever Labs</b></div>
+                        <!-- <h3 class="what green">Senior Online Editor</h3> -->
+                        <p class="description">Technical content Development Intern
                             <a href=""></a>
                         </p>
                     </li>
@@ -135,9 +143,8 @@
                     </ul>
                     <div class="lang">
                         <!-- <div class="elem"> -->
-                        <p class="lang-1"> ‎ C ‎</p>
+                        <p class="lang-1"> ‎ C / C++ ‎</p>
                         <p class="lang-1">Python</p>
-                        <p class="lang-1">Java</p>
                         <p class="lang-1">HTML5</p>
                         <p class="lang-1">Javascript(ES6)</p>
 
@@ -151,9 +158,7 @@
                     <div class="lang">
                         <p class="lang-1">Bootstrap</p>
                         <p class="lang-1">React</p>
-                        <p class="lang-1">MongoDB</p>
-                        <!-- <p class="lang-1">HTML5</p>
-                        <p class="lang-1">Javascript(ES6)</p> -->
+                        <!-- <p class="lang-1">MongoDB</p> -->
                     </div>
 
                     <ul>
@@ -166,7 +171,7 @@
                         <p class="lang-1">Github</p>
                         <p class="lang-1">Canva</p>
                         <p class="lang-1">Postman</p>
-                        <p class="lang-1">Heroku</p>
+                        <!-- <p class="lang-1">Heroku</p> -->
                         <p class="lang-1">Premier Pro</p>
                         <p class="lang-1">Adobe Lightroom</p>
                     </div>
