added updated resume

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <h3>Hi there, I'm <span>Anirudha Kamath</span></h3>
             <p>Web developer</p>
             <div class="elem">
-                <a href="img/AnirudhaKamath_ISE.pdf" Download class="btn"><i class="fa-solid fa-download"></i><b>Download
+                <a href="img/Anirudha_kamath_ISE.pdf" Download class="btn"><i class="fa-solid fa-download"></i><b>Download
                         Resume</b></a>
             </div>
         </div>
