added cantilever internship certificate

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                         <!-- <h3 class="what green">Senior Online Editor</h3> -->
                         <p class="description">Web Development and Designing Intern
                             <br>
-                            <a href="img/Sparks Internship(Sept 2022).png">Certificate</a>
+                            <a href="img/Sparks Internship(Sept 2022).png" style="color: red;"><i>Certificate</i></a>
                         </p>
                     </li>
                     <li class="green">
@@ -86,7 +86,8 @@
                         <div class="where"><b>Cantilever Labs</b></div>
                         <!-- <h3 class="what green">Senior Online Editor</h3> -->
                         <p class="description">Technical content Development Intern
-                            <a href=""></a>
+                            <br>
+                            <a href="img/Cantilever Internship Certificate.png" style="color: red;"><i>Certificate</i></a>
                         </p>
                     </li>
                     <!-- <li class="green">
