small changes made

--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
             );
         }
     </script> -->
-<!-- <script src="//code.tidio.co/gf6palb5zoqtpjpbpgtjxov0ykt6l3db.js" async></script> -->
+<script src="//code.tidio.co/gf6palb5zoqtpjpbpgtjxov0ykt6l3db.js" async></script>
 </body>
 
 </html>
