--- a/index.html
+++ b/index.html
@@ -145,10 +145,9 @@
                     <div class="lang">
                         <!-- <div class="elem"> -->
                         <p class="lang-1"> ‎ C / C++ ‎</p>
-                        <p class="lang-1">Python</p>
+                        <p class="lang-1">CSS</p>
                         <p class="lang-1">HTML5</p>
-                        <p class="lang-1">Javascript(ES6)</p>
-
+                        <p class="lang-1">Javascript(ES6)(Beginner)</p>
                     </div>
                     <!-- -----------Frameworks & Libraries---------------- -->
                     <ul>
@@ -158,7 +157,7 @@
                     </ul>
                     <div class="lang">
                         <p class="lang-1">Bootstrap</p>
-                        <p class="lang-1">React</p>
+                        <!-- <p class="lang-1">React</p> -->
                         <!-- <p class="lang-1">MongoDB</p> -->
                     </div>
 
@@ -171,7 +170,7 @@
                         <p class="lang-1">Git</p>
                         <p class="lang-1">Github</p>
                         <p class="lang-1">Canva</p>
-                        <p class="lang-1">Postman</p>
+                        <p class="lang-1">Virtual Box</p>
                         <!-- <p class="lang-1">Heroku</p> -->
                         <p class="lang-1">VS code</p>
                         <p class="lang-1">Adobe Lightroom</p>
